--- a/component-samples/demo/owner/docker-compose.yml
+++ b/component-samples/demo/owner/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     expose:
       - "8042"
       - "8043"
+      - "6443"
     ports:
      - "8042:8042"
      - "8043:8043"
@@ -23,27 +24,29 @@ services:
     env_file:
       - service.env
     secrets:
-      - ca-cert.pem
+    #   - ca-cert.pem
       - server-cert.pem
       - server-key.pem
-      - api-user.pem
-      - db_password.txt
+    #   - api-user.pem
+    #   - db_password.txt
     volumes:
       - ./app-data:/home/fdo/app-data 
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - "10.99.115.208:host-gateway"
     mem_limit: 500m
     mem_reservation: 200m
     cpu_shares: 1024
+    pids_limit: 500
+    network_mode: "host" 
 
 secrets:
-  ca-cert.pem:
-    file: ./secrets/ca-cert.pem
+#   ca-cert.pem:
+#     file: ./secrets/ca-cert.pem
   server-cert.pem:
     file: ./secrets/server-cert.pem
   server-key.pem:
     file: ./secrets/server-key.pem
-  api-user.pem:
-    file: ./secrets/api-user.pem
-  db_password.txt:
-    file: ./secrets/db_password.txt
+#   api-user.pem:
+#     file: ./secrets/api-user.pem
+#   db_password.txt:
+#     file: ./secrets/db_password.txt
