--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -68,6 +68,18 @@
       <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
     </dependency>
+      
+    <dependency>
+      <groupId>io.kubernetes</groupId>
+      <artifactId>client-java</artifactId>
+      <version>15.0.1</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.29</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
     <dependency>
